<?xml version="1.0" encoding="utf-8"?>

<!--
    Describe el diseño del formulario para añadir/modificar una habitación
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <!-- NOMBRE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nombre_habitacion" />
        <EditText
            android:id="@+id/form_nombre_habitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_nombre_habitacion"
            android:autofillHints=""/>

        <!-- DESCRIPCIÓN -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_descripcion_habitacion" />

        <EditText
            android:id="@+id/form_descripcion_habitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="5"
            android:hint="@string/hint_descripcion_habitacion"
            android:autofillHints=""/>

        <!-- NÚMERO DE OCUPANTES -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_ocupantes_habitacion"
                />
            <EditText
                android:id="@+id/form_ocupantes_habitacion"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints=""/>

        </LinearLayout>

        <!-- PRECIO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_precio_habitacion" />

            <EditText
                android:id="@+id/form_precio_habitacion"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/hint_precio_habitacion"
                android:autofillHints="" />
        </LinearLayout>

        <!-- RECARGO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_recargo_habitacion"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/form_recargo_habitacion"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:autofillHints=""
                android:hint="@string/hint_recargo_habitacion"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_aceptar_editar_habitaciones"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/button_text_aceptar"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

