<?xml version="1.0" encoding="utf-8"?>

<!--
    Describe el diseño de la pantalla de consulta de una habitación
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical">

    <!-- NOMBRE -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_nombre_habitacion" />
    <TextView
        android:id="@+id/text_nombre_habitacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" />

    <!-- DESCRIPCIÓN -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_descripcion_habitacion" />

    <TextView
        android:id="@+id/text_descripcion_habitacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" />

    <!-- NÚMERO DE OCUPANTES -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/text_ocupantes_habitacion"
            />
        <TextView
            android:id="@+id/text_ocupantes_habitacion"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="end"/>

    </LinearLayout>

    <!-- PRECIO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/text_precio_habitacion" />

        <TextView
            android:id="@+id/text_precio_habitacion"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="end"/>
    </LinearLayout>

    <!-- RECARGO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/text_recargo_habitacion"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/text_recargo_habitacion"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="end"/>

    </LinearLayout>

</LinearLayout>
