<?xml version="1.0" encoding="utf-8"?>

<!--
    Describe el diseño del formulario para añadir/modificar una reserva
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <!-- NOMBRE DEL CLIENTE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nombre_cliente_reserva" />
        <EditText
            android:id="@+id/edittext_nombre_cliente_reserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint=""
            android:autofillHints=""/>

        <!-- TELEFONO DEL CLIENTE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_telefono_cliente_reserva" />
        <EditText
            android:id="@+id/edittext_tlf_cliente_reserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:autofillHints=""/>

        <!-- FECHA DE ENTRADA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_fecha_entrada_reserva"
                />
            <EditText
                android:id="@+id/edittext_fecha_entrada_reserva"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:gravity="center"
                android:inputType="date"
                android:autofillHints=""/>
        </LinearLayout>

        <!-- FECHA DE SALIDA-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_fecha_salida_reserva"
                />
            <EditText
                android:id="@+id/edittext_fecha_salida_reserva"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:gravity="center"
                android:inputType="date"
                android:autofillHints=""/>
        </LinearLayout>

        <!-- Habitaciones disponibles -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_habitaciones_disponibles" />

            <Spinner
                android:id="@+id/spinner_lista_habitaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <!-- Número de ocupantes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_ocupantes_habitacion"/>

            <EditText
                android:id="@+id/edittext_numero_ocupantes_habitacion"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints=""/>

            <Button
                android:id="@+id/button_anadir_habitacion_reserva"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/button_text_anadir"
                android:textSize="16sp"/>
        </LinearLayout>

        <!-- Listado -->

        <!-- Texto cuando la lista está vacía -->
        <ListView
            android:id="@+id/listview_habitaciones_reservadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:ignore="NestedScrolling" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textSize="24sp"/>

        <!-- Precio reserva -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/text_precio_total" />

            <TextView
                android:id="@+id/textview_precio_reserva"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_aceptar_reserva"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/button_text_aceptar"
                android:textSize="20sp"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>
